[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pogodoc"
version = "0.5.10"
description = "Python SDK for Pogodoc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11.4,<3",
  "httpx>=0.28.1,<1",
  "stream-python",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pogodoc*"]


[project.urls]
homepage = "https://pogodoc.com"
repository = "https://github.com/pogodoc/pogodoc-py"
