[project]
name = "pogodoc-py"
version = "0.1.0"
description = "Python SDK for Pogodoc"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
  "pydantic==2.11.4",
  "httpx==0.25.1",
  "stream-python"
]

[project.urls]
homepage = "pogodoc.com"
repository = "github.com/pogodoc/pogodoc-py"